--- a/src/angular2-toaster/package.json
+++ b/src/angular2-toaster/package.json
@@ -15,6 +15,7 @@
     "angular",
     "angular10",
     "angular11",
+    "angular13",
     "angularjs-toaster",
     "angular-toaster",
     "angular2-toaster",
@@ -24,10 +25,10 @@
     "growl"
   ],
   "peerDependencies": {
-    "@angular/common": "^11.0.0",
-    "@angular/compiler": "^11.0.0",
-    "@angular/core": "^11.0.0",
-    "rxjs": "^6.5.3"
+    "@angular/common": "^13.0.0",
+    "@angular/compiler": "^13.0.0",
+    "@angular/core": "^13.0.0",
+    "rxjs": "^6.5.3 || ^7.5.0"
   },
   "dependencies": {
     "tslib": "^2.0.0"
