--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,5 @@
 .angular
+.idea
 node_modules
 src/node_modules
 npm-debug.log
@@ -10,7 +11,7 @@ src/*.js
 src/*.map
 src/*.d.ts
 src/*.ngfactory.ts
-angular2-toaster.d.ts
+# angular2-toaster.d.ts
 demo/webpack/bundle.js
 demo/webpack/bundle.js.map
 .DS_Store
