--- a/.gitignore
+++ b/.gitignore
@@ -52,7 +52,7 @@ src/*.js
 src/*.map
 src/*.d.ts
 src/*.ngfactory.ts
-angular2-toaster.d.ts
+# angular2-toaster.d.ts
 demo/webpack/bundle.js
 demo/webpack/bundle.js.map
 
