--- a/.gitignore
+++ b/.gitignore
@@ -2,14 +2,14 @@ node_modules
 src/node_modules
 npm-debug.log
 coverage
-dist
+# dist
 build
 typings
 src/*.js
 src/*.map
 src/*.d.ts
 src/*.ngfactory.ts
-angular2-toaster.d.ts
+# angular2-toaster.d.ts
 demo/webpack/bundle.js
 demo/webpack/bundle.js.map
 .DS_Store
